tests/negative/test_decl_cn_not_init.orb
fnc main() {
    let i32 cn x;
}